examples/type_system/failing/141_recursive_self_reference_negative_guard.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn id(x) { x }
fn add(a: Int, b: Int) -> Int { a + b }

fn main() -> Unit {
    let _v = id(1)
    let _z = add(1)
}
